<resources>
    <string name="app_name">StoryApp</string>
    <string name="welcome">Welcome Back</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="name_hint">Enter your name</string>
    <string name="register_span">Dont have an account? Register Now</string>
    <string name="register_now">Register now</string>
    <string name="register_name">Name</string>
    <string name="login_span">Already have account? Login Now</string>
    <string name="login_now">Login Now</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="login_failed">Login Failed,please check your input</string>
    <string name="login_failed_no_internet">Login failed,please check your network</string>
    <string name="login_success">Login Success, welcome back to Story App</string>
    <string name="register_failed">Register failed,please check your input</string>
    <string name="register_failed_no_internet">Register failed,please check your network</string>
    <string name="email_taken">This email is already taken,please use another email</string>
    <string name="email_error">Please provide a valid email(e.g., name@example.com)</string>
    <string name="add_story">AAdd new story</string>
    <string name="fetch_story_failed">Failed to fetch stories</string>
    <string name="no_more_page">There is no more page</string>
    <string name="retry">Retry</string>
    <string name="image_preview">Image Preview</string>
    <string name="enter_description">Enter Description</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>
    <string name="send">Send</string>
    <string name="image_required">Please select the image first!</string>
    <string name="post_success">Story successfully added</string>
    <string name="post_failed">Failed to add story,please check your network</string>
    <string name="camera_no_Ready">Camera not initialized,please retry</string>
    <string name="failed_camera">Failed start to camera, please retry</string>
    <string name="take_picture_failed">Take picture failed,please retry</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="logout_message">Are you sure  you want to log out?</string>
    <string name="language">Language</string>
    <string name="restart_required">Restart required</string>
    <string name="restart_message">You need to restart to app to apply the language changes</string>
    <string name="ok">Oke</string>
    <string name="no_story">Oops! There are no stories available !</string>
    <string name="register_success">Registration successfully!</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>
    <string name="appwidget_text">StoryApp</string>
    <string name="add_widget">Add Widget</string>
    <string name="app_widget_description">Widget to display stories</string>
    <string name="no_stories_available">No Story Available</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="location_permission_denied">Location permission denied.</string>
    <string name="your_location">You are here!</string>
    <string name="maps_error_message">Please check your network and try again.</string>
    <string name="logout_process">Logging out</string>
    <string name="description_required">Description cannot be empty</string>
</resources>