<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_maps"
        android:title="@string/maps"
        android:icon="@drawable/icon_map"
        app:showAsAction="ifRoom" />
<item
    android:id="@+id/action_settings"
    android:title="@string/settings"
    android:icon="@drawable/icon_setting"
    app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/settings"
        android:icon="@drawable/icon_logout"
        app:showAsAction="ifRoom"/>
</menu>