<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.ui.StoryActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.fragment.app.FragmentContainerView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navGraph="@navigation/story_navigation"
        app:defaultNavHost="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_story"
        android:src="@drawable/icon_add"
        app:tint="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary"/>


</FrameLayout>